--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
   font-family: 'IBM Plex Sans', sans-serif;
 }
 
+.log-entry[data-source="stderr"] > .log-entry__content {
+  color: #B71C1C;
+}
+
 .log-entry__content, .log-entry__ts {
   display: inline;
 }
