Move control buttons to right side of control bar
This is a better position for right handed users to select
these buttons with their thumb

--- a/src/style.scss
+++ b/src/style.scss
@@ -34,6 +34,17 @@ body {
     bottom: 0;
     top: initial;
     position: fixed;
+    flex-direction: row-reverse;
+
+    .control-buttons {
+        flex-direction: row-reverse;
+    }
+
+    #status {
+      display: flex;
+      justify-content: flex-end;
+    }
+
   }
 
   & > .field {
