--- a/src/style.scss
+++ b/src/style.scss
@@ -39,6 +39,26 @@ body {
 
     .control-buttons {
         flex-direction: row-reverse;
+
+        &.field.has-addons {
+          .control:last-child {
+            margin-right: -1px;
+            .button {
+                border-top-right-radius: 0;
+                border-bottom-right-radius: 0;
+                border-top-left-radius: 4px;
+                border-bottom-left-radius: 4px;
+            }
+          }
+          .control:first-child {
+            .button {
+                border-top-right-radius: 4px;
+                border-bottom-right-radius: 4px;
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 0;
+            }
+          }
+        }
     }
 
     #status {
