Add some padding

--- a/src/style.scss
+++ b/src/style.scss
@@ -176,6 +176,7 @@ body {
     .log-entry__ts {
       grid-column: 1;
       padding-right: 0.5rem;
+      padding-left: 0.5rem;
     }
 
     .log-entry__content {
