--- a/src/style.scss
+++ b/src/style.scss
@@ -20,6 +20,7 @@ body {
   --content-bg-color: #{$light};
   --control-bg-color: #{$white};
   --control-border-color: #{$white};
+  --code-text-color: #da1039;
 
   &.dark-theme {
     --bg-color: #{$grey-darker};
@@ -27,6 +28,7 @@ body {
     --content-bg-color: #{$grey-dark};
     --control-bg-color: #{$grey-darker};
     --control-border-color: #{$grey-dark};
+    --code-text-color: #b8efff;
   }
 
   @media (prefers-color-scheme: dark) {
@@ -35,6 +37,7 @@ body {
     --content-bg-color: #{$grey-dark};
     --control-bg-color: #{$grey-darker};
     --control-border-color: #{$grey-dark};
+    --code-text-color: #b8efff;
 
     &.light-theme {
       --bg-color: #{$white};
@@ -42,6 +45,7 @@ body {
       --content-bg-color: #{$light};
       --control-bg-color: #{$white};
       --control-border-color: #{$white};
+      --code-text-color: #da1039;
     }
   }
 }
@@ -57,6 +61,10 @@ body {
     border-color: var(--control-border-color);
     color: var(--text-color);
   }
+}
+
+code {
+  color: var(--code-text-color);
 }
 
 body {
@@ -89,6 +97,32 @@ body {
 .modal-card-head,
 .modal-card-foot {
   border-color: var(--content-bg-color);
+}
+
+#modal-info {
+  .modal-card-body {
+    display: flex;
+    align-items: center;
+
+    font-size: 1.25rem;
+    white-space: nowrap;
+
+    .wifi-details {
+      text-align: center;
+      font-size: 1rem;
+      white-space: initial;
+    }
+
+    @media screen and (max-width: $mobile-breakpoint) {
+      flex-direction: column;
+      .wifi-details {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        gap: 1rem;
+      }
+    }
+  }
 }
 
 #qrcode-wifi {
