Hide WiFi info if it has been disabled

--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -43,3 +43,12 @@
 #zone-3 {
     accent-color: var(--sr-zone-3);
 }
+
+body.has-wifi-enabled {
+    #wifi-info {
+        display: block !important;
+    }
+    #wifi-disabled {
+        display: none;
+    }
+}
