--- a/css/logs.css
+++ b/css/logs.css
@@ -22,6 +22,8 @@
     content-visibility: auto;
     height: 1.4rlh;
     grid-template-columns: 5fr 95fr;
+    overflow: scroll;
+
     &:nth-child(even) {
       div {
         background-color: color-mix(
@@ -45,7 +47,7 @@
 
     .log-entry__content {
       grid-column: 2;
-      word-break: break-word;
+      white-space: pre;
     }
   }
 
