--- a/css/logs.css
+++ b/css/logs.css
@@ -73,5 +73,10 @@
     text-align: center;
     font-family: var(--bulma-body-family), sans-serif;
     width: 100vw;
+
+    .material-symbols-outlined {
+      vertical-align: middle;
+      margin-right: .3ch;
+    }
   }
 }
