--- a/css/logs.css
+++ b/css/logs.css
@@ -76,7 +76,7 @@
 
     .material-symbols-outlined {
       vertical-align: middle;
-      margin-right: .3ch;
+      margin-right: 0.3ch;
     }
   }
 }
